fix image too big on desktop

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -61,6 +61,13 @@
 }
 
 .hero-welcome__image {
-  width: 60%;
+  width: 30%;
   border-radius: 150px;
+}
+
+@include media-breakpoint-down(lg) {
+  .hero-welcome__image {
+    width: 60%;
+    border-radius: 150px;
+  }
 }
